chore: adicionando feature que ao sacar uma carta adiciona na mao do jogador

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             position: absolute;
         }
 
-        .card-in-mao {
+        .card-in-mao, .card-in-deck  {
             width: 80px;
             height: 120px;
             background-color: white;
@@ -56,7 +56,7 @@
             padding: 10px;
             cursor: pointer;
             margin: 0 5px; 
-        }
+        }   
 
         .zone {
             border: 2px dashed rgb(249, 0, 0);
