--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         .card-in-mao, .card-in-deck  {
             width: 80px;
             height: 120px;
-            background-color: white;
-            border: 1px solid black;
+            background-color: black;
+            border: 1px solid rgb(233, 13, 13);
             margin: 5px;
             padding: 10px;
             cursor: pointer;
