--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         }
 
         .card-in-mao, .card-in-deck  {
+            color: red;
             width: 80px;
             height: 120px;
             background-color: black;
